# my-sticky-notes

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TAURI_MIGRATION.md  app.py  build.ps1  package.json  pyproject.toml  requirements-build.txt
.github/workflows/: ci.yml  release.yml  tauri-build.yml
installer/: MyStickyNotes.nsi
scripts/: build_app_icon.py  build_light_icons.py  build_note_action_icons.py  build_settings_control_assets.py  capture_windows.py  check_pe_subsystem.py  compose_product_screenshot.py  desktop_behavior_regression.py  extract_nsis.py  make_settings_design_comparison.py  send_tray_action.py  settings_layout_regression.py  tauri_runtime_probe.py  tauri_single_instance_probe.py  tauri_state_test.mjs  tauri_static_check.mjs  tauri_update_test.mjs  ui_smoke_test.py  visual_fixture.py  write_version_info.py
src/: app.js  index.html  state.js  styles.css  updates.js  views.js
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: direct_update.rs  main.rs  single_instance.rs
src/assets/icons/: LICENSE-lucide.txt
sticky_notes/: __init__.py  controller.py  i18n.py  model.py  store.py  theme.py  update_checker.py
sticky_notes/platform/: autostart.py  single_instance.py  tray.py  windows.py
sticky_notes/ui/: __init__.py  color_picker.py  icons.py  input_session.py  note_window.py  settings_window.py  title_bar.py  todo_drag.py  todo_list.py
tests/: test_assets.py  test_autostart.py  test_build_version_info.py  test_controller.py  test_input_session.py  test_model.py  test_note_window.py  test_packaging_contract.py  test_store.py  test_theme.py  test_todo_drag_state.py  test_tray.py  test_ui_contract.py  test_update_checker.py  test_windows.py
