[package]
name = "my-sticky-notes"
version = "0.3.0-alpha.0"
description = "A lightweight local-first sticky todo app rebuilt with Tauri."
authors = ["LLYYXX"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
